# app/controllers/api/v1/users_controller.rb
@@ -2,7 +2,8 @@ class Api::V1::UsersController < ApplicationController
   before_action :set_user, only: [:show, :destroy]
 
   def index
-    @users = User.all
+    filters = params[:filters] || {}
+    @users = User.filter_by(filters).page(params[:page]).per(params[:per_page])
 
     render json: @users
   end
@@ -17,7 +18,7 @@ class Api::V1::UsersController < ApplicationController
     @user = User.new(user_params)
 
     if @user.save
-      render json: @user, status: :created#, location: @user
+      render json: @user, status: :created
     else
       render json: @user.errors, status: :unprocessable_entity
     end
